  31. Prop_*Adjuster now supports multiplying values, see help on Prop_HaveAdjuster
  32. Concierge behavior can now create portals if you want.
  33. Stolen property (property taken from a home or owned ship) cannot be sold to shopkeepers.
  34. New config option and Command: NOBATTLESPAM, for getting only damage summaries.
  35. New auto-disease: Sea Sickness
  36. Sailing Ship now have TENDER command to extend gangplanks between peaceful ships
  37. New Skills: Sea Legs, Ride the Rigging, Belay, Buried Treasure, Wenching
  38. New Skills: Treasure Map, Walk the Plank, Sea Mapping, Plunder, Sea Charting
  39. New Skills: Dead Reckoning, Sea Navigation, Scuttle, Fence Loot, Pet Spy
  40. New Skills: Pirate Familiar, Pub Contacts, Combat Repairs, Foul Weather Sailing
  41. New Skills: Pay Off, Pet Steal, Merchant Flag, Pieces of Eight, Articles
  42. New Skills: Ramming Speed, Smuggler's Hold, Hide Ship, Intercept Ship, Await Ship
  43. New Skills: Mast Shot, Warning Shot, Silent Running, Water Tactics, Trawling
  44. New Skills: Diving, Siege Weapon Specialization, Deep Breath, Avoid Currents
  45. If it's not already obvious, new char class in beta: Pirate
  46. Internal: Web Server upgraded to rev 2.4 (SSL fixes and Protocol switching)
  47. Mundane STAT command now supports HEALTH, RESISTS, ATTRIBUTES
  48. New Spell: Lighthouse   
  49. DAYSCLANOVERTHROW separated from DAYSCLANDEATH -- see INI file.
  50. New Skills: Naval Tactics, Salvaging, Sea Maneuvers, Crows Nest, Hire Crewmember
  51. New Skills: Morse Code
  52. Can now LIST AREATYPES
  53. Individual diseases can now be disabled from the DISABLE= entry in the INI file.
# Build 5.9.3 Released 05/08/2016
   1. Follower behavior now has a few more options.
   2. STAT [MOBNAME] will now give full editor stats also, and 
   3. STAT [ITEMNAME/AREANAME/EXITNAME/ROOMNAME] now gives editor stats without editing
   4. New Locales: WaterSurfaceColumn and UnderWaterColumnGrid, and Salt water varieties.