@@ -369,6 +369,16 @@ This disease lowers strength, constitution, hit points, mana, and movement, as w
 as causing bursts of damage.  It occasionally comes from infected rat meat.  It is \
 spread by proximity to the infected.
 
+SCURVY=DISEASE_SCURVY
+DISEASE_SCURVY=\
+Disease    : SCURVY\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+This disease causes ones gums to soften and spots to appear on the body, lowering \
+charisma dramatically.  It is caused by riding in large sailing vessels too often. \
+Luckily, it is easily cured by eating citris (orange, lemons, limes) or peppers.
+
 SLEEPWALKING=DISEASE_SLEEPWALKING
 DISEASE_SLEEPWALKING=\
 Disease    : Sleepwalking\n\r\
