@@ -371,6 +371,12 @@ to advance by using his skills and gaining experience while he does! Artisans, \
 like Apprentices, may still choose to go into a more adventurous profession, \
 but like Apprentices, they are unable to go back.
 
+SAILOR=<CHARCLASS>\
+Sailors are the workmen of the high seas.  These common folk spent their lives \
+gathering resources, traveling, transporting goods, and exploring seas, rivers \
+and lakes.  On large sailing vessels, their skills are unparalleled, and no \
+ship should be without plenty of them.
+
 GAOLER=<CHARCLASS>\
 The Gaoler (pronounced like Jailer), is the ancient dungeon keeper.  He \
 specializes in those implements and activities which reflect the worst and \
