@@ -3231,6 +3231,19 @@ Example  : \n\r\
 The Barbarian has become so hardened to battle that he or she ignores \
 2 points from every damage roll taken.
 
+STOWAWAY=SKILL_STOWAWAY
+SKILL_STOWAWAY=<ABILITY>\
+Usage    : STOWAWAY ([DESTINATION]/[CHART INDEX]) \n\r\
+Example  : stowaway\n\r\
+Example  : stowaway new thalos docks\n\r\
+Example  : stowaway 3\n\r\
+The sailor packs himself into a shipping crate bound for overseas travel, \
+and, after a long sea voyage, emerges on a different shore.  If the sailor \
+knows Sea Charting, he or she may be able to select the destination from \
+his or her charts.  Shorter voyages to more distant locations can be \
+obtained through expertise. A failed skill check will seem to work fine, but \
+the sailor will not end up where their charts said they would.
+
 THIEF_STRATEGICRETREAT=STRATEGIC_RETREAT
 STRATEGICRETREAT=STRATEGIC_RETREAT
 FREEFLEE=STRATEGIC_RETREAT
