@@ -58,14 +58,14 @@
 			<TR><TD WIDTH=35%>(@AbilityData?typendomain@)</TD>
 			<TD WIDTH=15% ALIGN=RIGHT>@AbilityData?qualifyQ@</TD>
 			<TD WIDTH=50%>&nbsp;
-			<a href="javascript:openUp('@AbilityID@');">@AbilityName@</a> 
+			<a href="javascript:openUp('@AbilityID@');">@if?AbilityData?CLASSONLY@ <B>@AbilityName@</B> @else@ @AbilityName@ @endif@</a> 
 			</TD></TR>
 			@back@
 			@loop@ @ExpertiseNext@ 
 			<TR><TD WIDTH=35%>(Expertise)</TD>
 			<TD WIDTH=15% ALIGN=RIGHT><FONT COLOR=BLACK>(Available)</FONT></TD>
 			<TD WIDTH=50%>&nbsp;
-			<a href="javascript:openEdu('@ExpertiseID@');">(@ExpertiseData?name@)</a> 
+			<a href="javascript:openEdu('@ExpertiseID@');"><FONT COLOR=BLACK>(@ExpertiseData?name@)</FONT></a> 
 			</TD></TR>
 			@back@
 		</TABLE>
