@@ -33,7 +33,7 @@
   32. Concierge behavior can now create portals if you want.
   33. Stolen property (property taken from a home or owned ship) cannot be sold to shopkeepers.
   34. New config option and Command: NOBATTLESPAM, for getting only damage summaries.
-  35. New auto-disease: Sea Sickness
+  35. New auto-diseases: Sea Sickness, Scurvy
   36. Sailing Ship now have TENDER command to extend gangplanks between peaceful ships
   37. New Skills: Sea Legs, Ride the Rigging, Belay, Buried Treasure, Wenching
   38. New Skills: Treasure Map, Walk the Plank, Sea Mapping, Plunder, Sea Charting
@@ -49,9 +49,10 @@
   48. New Spell: Lighthouse   
   49. DAYSCLANOVERTHROW separated from DAYSCLANDEATH -- see INI file.
   50. New Skills: Naval Tactics, Salvaging, Sea Maneuvers, Crows Nest, Hire Crewmember
-  51. New Skills: Morse Code
+  51. New Skills: Morse Code, Stowaway
   52. Can now LIST AREATYPES
   53. Individual diseases can now be disabled from the DISABLE= entry in the INI file.
+  54. New Commoner class in beta: Sailor  
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
